corrected overflow when a item reached a 100

--- a/style.css
+++ b/style.css
@@ -8,19 +8,24 @@ body {
 }
 
 #container {
-    display: flex; 
-    flex-direction: row; 
-    flex-wrap: wrap; 
+    /* display: flex;
+    flex-wrap: wrap;
+    flex: 1; */
+    inset: 0;
     width: 50%; 
     height: 50%; 
     border: 1px solid black;
+    line-height: 0;
 }
 
 .grid-item {
-    padding: 0.1%;
-    border: 1px solid black;
-    text-align: center;
-    flex: 1px;
+    display: inline-block;
+    border-width: 0 1px 1px 0;
+    border-color: black;
+    border-style: solid;
+    height: 10%;
+    width: 10%;
+    box-sizing: border-box;
 }
 
 #rows {
